[tool.poetry]
name = "investments"
version = "0.1.0"
description = ""
authors = ["Damian Mirecki <dmirecki.dm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
jupyterlab = "^3.0.5"
ipywidgets = "^7.6.3"
numpy = "^1.19.5"
pandas = "^1.2.0"
requests = "^2.25.1"
pyOpenSSL = "^20.0.1"
plotly = "^4.14.3"
openpyxl = "^3.0.6"
dateparser = "^1.0.0"
xlrd = "^2.0.1"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
